--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <main class="container">
         <header>
             <ul class="primary-nav">
-                <li id="headlines" class="list">Home</li>
+                <li id="headlines" class="list active">Home</li>
                 <li id="tech" class="list">Tech</li>
                 <li id="health" class="list">Health</li>
                 <li id="sports" class="list">Sports</li>
@@ -39,25 +39,13 @@
                 <div class="row">
                     <div class="col-8">
                         <div class="news-content">
-                            <h4>Lok Sabha election 2019: Sharad Pawar steps in to kickstart AAP-Congress talks for
-                                Lok Sabha
-                                polls
-                            </h4>
-                            <p>
-                                Nationalist Congress
-                                Party boss Sharad Pawar on Tuesday stepped in to help Rahul Gandhi’s Congress and Arvind
-                                Kejriwal’s Aam
-                                Aadmi Party work out an alliance in the national capital for the Lok Sabha elections.
-                                Pawar
-                                also
-                                reached out
-                                to AAP’s Rajya Sabha memb… [+2419 chars]</p>
+                            <h4>Lok Sabha election 2019: Sharad Pawar steps in to kickstart AAP-Congress talks for Lok Sabha polls </h4>
+                            <p> Nationalist Congress Party boss Sharad Pawar on Tuesday stepped in to help Rahul Gandhi’s Congress and Arvind Kejriwal’s Aam Aadmi Party work out an alliance in the national capital for the Lok Sabha elections. Pawar also out to AAP’s Rajya Sabha memb… [+2419 chars]</p>
                         </div>
                     </div>
                     <div class="col-4">
                         <img class="news-thumbnail"
-                            src="https://www.hindustantimes.com/rf/image_size_960x540/HT/p2/2019/03/19/Pictures/bharat-bandh-over-fuel-and-rupee_fc7cac64-4a22-11e9-9111-3135b956f139.jpg"
-                            alt="Image">
+                            src="https://www.hindustantimes.com/rf/image_size_960x540/HT/p2/2019/03/19/Picture bharat-bandh-over-fuel-and-rupee_fc7cac64-4a22-11e9-9111-3135b956f139.jpg" alt="Image">
                     </div>
                 </div>
             </div> -->
