--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <!-- <link rel="preload"> -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,600,700,800,900" rel="stylesheet"> -->
     <link
         href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Work+Sans:300,400,500,600,700,800,900"
@@ -34,7 +35,17 @@
                 <li id="sports" class="list">Sports</li>
             </ul>
         </header>
+
         <section id="news">
+            <div class="active-title">
+                <div class="active-tab">
+                    <i class="material-icons" style="vertical-align: text-bottom;">home</i>
+                    Home
+                </div>
+                <div class="news-search">
+                    <input type="text">
+                </div>
+            </div>
             <!-- <div class="card">
                 <div class="row">
                     <div class="col-8">
